# zsign

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh
.github/workflows/: build.yml
common/: common.cpp
src/: archo.cpp  archo.h  bundle.cpp  bundle.h  macho.cpp  macho.h  openssl.cpp  openssl.h  signing.cpp  signing.h  zsign.cpp  zsign_config.h.in
src/common/: base64.cpp  base64.h  common.cpp  common.h  json.cpp  json.h  mach-o.h
src/common/win/: dirent.h  mman.h
